Coverity analysis defect 148363: Data race condition

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/s/migration_destination_manager.cpp:1434: MISSING_LOCK 148363 Accessing "this->_parallelFetchersSupported" without holding lock "mongo::MigrationDestinationManager._mutex". Elsewhere, "mongo::MigrationDestinationManager._parallelFetchersSupported" is written to with "MigrationDestinationManager._mutex" held 1 out of 1 times.

            Assignee:
            Kruti Shah
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: