SERVER-109693 Remove unused parallelFetchingSupported from migration destination manager (#41173)

GitOrigin-RevId: 94153650d4de2a6c5c91e271b6500602652c6b41